# icml-2022-rules-vs-exemplars

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg
analyses/: CelebA_naturalPE.ipynb  CelebA_results.ipynb  Data_Analysis_quickvisual.R  IMDB_analysis.ipynb  IMDB_augment_labels.ipynb  Linear_control_spurious.ipynb  Linear_main.ipynb
configs/static/: celeba.gin  imdb.gin  toyGP.gin  toyMLP.gin  vit_celeba.gin
scripts/: main.py
src/rules_vs_exemplars/: kernels.py  models.py  train.py  utils.py
src/rules_vs_exemplars/data/: __init__.py  base.py  base_test.py  celeb_a.py  imdb.py  linear.py
