[metadata]
name = rules_vs_exemplars
version = attr: rules_vs_exemplars.__version__
author = Erin Grant
url = "https://github.com/eringrant/icml-2022-rules-vs-exemplars"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.8
install_requires =
    # Models / training.
    optax>=0.0.2
    dm-haiku>=0.0.6
    gin-config>=0.4.0

    # Datasets.
    tensorflow-cpu==2.8.0   # These need to be
    tensorflow-text==2.8.0rc0  # the same version.
    tensorflow-datasets>=4.2.0
    networkx

    # ViT models.
    vit_jax @ git+https://github.com/google-research/vision_transformer.git

    # Plotting, analysis, etc.
    matplotlib>=3.3.3
    pandas>=1.4.2
    jupyter

[options.packages.find]
where = src
